fixet drop down overlap for udlejning

--- a/web/static/css/header.css
+++ b/web/static/css/header.css
@@ -12,6 +12,7 @@
 
 li.dropdown {
     display: inline-block;
+    z-index: 5;
 }
 
 .dropdown-content {
